# Blockchain-in-Cpp

./: .gitignore  README.md  chain.sql
toychain/: README.md
toychain/backend/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  toychain_server
toychain/backend/include/: block.h  block.hpp  blockchain.h  blockchain.hpp  crypto.hpp  pow.hpp  storage.hpp  transaction.h  util.hpp
toychain/backend/src/: block.cpp  block.h  blockchain.cpp  blockchain.h  crypto.cpp  main.cpp  pow.cpp  server.cpp  server.h  storage.cpp  transaction.cpp  transaction.h  util.cpp  utxo.cpp  utxo.h
toychain/backend/src/db/: Database.cpp  Database.hpp
toychain/data/: chain.db
toychain/frontend/: index.html  package-lock.json  package.json
toychain/frontend/src/: App.css  App.jsx
toychain/frontend/src/components/: AddTransactionForm.jsx  BlockCard.jsx  BlockchainView.css  BlockchainView.jsx  BlockchainViewer.jsx  EditBlockModal.css  EditBlockModal.jsx  MiningAnimation.css  MiningAnimation.jsx  UTXOList.jsx
